--- a/Backend/package.json
+++ b/Backend/package.json
@@ -28,6 +28,8 @@
     "nodemon": "^3.1.9",
     "openai": "^4.82.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "zod": "^3.24.1",
+    "zod-to-ts": "^1.2.0"
   }
 }
